--- a/who-is-healthy-anyways.qmd
+++ b/who-is-healthy-anyways.qmd
@@ -56,9 +56,9 @@ execute:
 
 **RATIONALE:** Racialized populations disproportionately experience exposures that impair lung function. Race-averaged reference equations are intended to mitigate bias due to disproportionate exposures at the cost of reduced precision. We hypothesized that the disproportionate impact of social determinants of health (SDoH) captured in survey data could help explain a larger proportion of racial gaps in lung function than previously reported.
 
-**METHODS:** We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV~1~ and FVC between minority race and ethnicity groups and White participants, separately for adults (≥20) and youths (\<20).
+**METHODS:** We defined a series of nested reference populations using data from NHANES 2007-2012 participants. Starting with non-smokers without respiratory symptoms or diagnoses, we sequentially excluded those with confirmed occupational exposure to dust/fumes, physical inactivity, maternal tobacco use, obesity, no home ownership, no insurance, lower education, and self-reported unhealthy diet. Across successive populations, we compared average age-, sex-, and height-adjusted differences in FEV~1~ and FVC between minority race and ethnicity groups and White participants, separately for adults (≥20) and children (6-19).
 
-**RESULTS:** In successively healthier populations, the proportion of participants declined for non-Hispanic Black, Mexican American, and Other Hispanic populations but remained close to the reference population for Asian and Other/Multiracial participants. After excluding individuals with unfavorable SDoH, the gap between non-Hispanic Black and White Americans in FEV~1~ and FVC reduced by 25% and 26% in youths and 26% and 19% in adults. The gap between Asian and White Americans reduced by 7% and 13% among youths but increased by 14% and 11% among adults. At baseline, Mexican Americans had slightly higher adjusted FEV~1~ and FVC than non-Hispanic White Americans, and excluding those with unfavorable SDoH increased this gap.
+**RESULTS:** In successively healthier populations, the proportion of participants declined for non-Hispanic Black, Mexican American, and Other Hispanic populations but remained close to the reference population for Asian and Other/Multiracial participants. After excluding individuals with unfavorable SDoH, the gap between non-Hispanic Black and White Americans in FEV~1~ and FVC reduced by 25% and 26% in children and 26% and 19% in adults. The gap between Asian and White Americans reduced by 7% and 13% among children but increased by 14% and 11% among adults. At baseline, Mexican Americans had slightly higher adjusted FEV~1~ and FVC than non-Hispanic White Americans, and excluding those with unfavorable SDoH increased this gap.
 
 **CONCLUSIONS:** The SDoH investigated herein disproportionately affected Black, Mexican American, and Other Hispanic populations, and explained a higher proportion of racial disparities in lung function than previously reported.
 
@@ -78,11 +78,13 @@ Our study aims to determine if a more comprehensive set of SDoH in more recent c
 
 ## Methods
 
-We used data from three cycles of NHANES (2007-2012) with appropriate 6-year sampling weights to account for complex survey design. We included individuals with baseline spirometry that either met or exceeded ATS collection standards. We carefully reviewed the NHANES variable list and selected SDoH-related variables that could affect lung function. We defined SDoH broadly to include employment and working conditions, income and social status, education, environmental exposures, healthy behaviors, stress, access to healthcare, diet, and housing. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-reported unhealthy diet.
+We used data from three cycles of NHANES (2007-2008, 2009-2010, and 2011-2012), which was designed to be representative of the non-institutionalized civilian population of the US. Our study population included children aged 6-19 and adults aged 20-80. We included individuals with baseline spirometry that either met or exceeded ATS collection standards.
+
+We carefully reviewed the NHANES variable list and selected SDoH-related variables that could affect lung function. We defined SDoH broadly to include employment and working conditions, income and social status, education, environmental exposures, healthy behaviors, stress, access to healthcare, diet, and housing. We defined 10 increasingly healthier reference populations. Starting from the base reference population of non-smokers with no diagnoses of lung diseases or respiratory symptoms, we sequentially excluded those with confirmed occupational exposures, physical inactivity, maternal smoking, obesity (defined as body-mass-index≥30), no home ownership, no insurance, lower education, and self-reported unhealthy diet.
 
 Occupational exposure was defined as exposure to either mineral dust, organic dust, exhaust fumes, or other fumes at work. Individuals who did not have at least 10 minutes of vigorous or moderate activity in a typical week, either for work or recreationally, were considered physically inactive. Lower educated individuals were defined as adults 20 years of age and older with a high school or a GED degree or lower, and 6-19 years old who were neither in school nor on vacation from school. Individuals who self-reported their dietary health as either poor or fair were considered to have an unhealthy diet. Poverty was measured as the ratio of income to federal poverty levels. We calculated allostatic load score based on twelve commonly used biomarkers, using the method proposed by Liu et al [@liu2021]. Biomarkers included were C-reactive protein, white blood cell count, glycohemoglobin, serum albumin, serum creatinine, total cholesterol, high density lipoprotein (HDL), serum triglycerides, BMI, resting systolic blood pressure, resting diastolic blood pressure measurements, and pulse rate. For each of the twelve biomarkers, the participant received a score of 1 if their value was deemed high-risk (i.e., below 25% percentile for HDL and serum albumin and above 75% percentile for other biomarkers) and 0 if low risk. Possible values for allostatic load score ranged from 0 to 12.
 
-For each reference population, the racial gap was calculated as the average difference in forced expiratory volume in one second (FEV~1~) and forced vital capacity (FVC) between minority and majority populations adjusted by age, height, and sex in a linear regression model. We evaluated the reduction in the racial gap separately for youth (\<20 yrs) and adults (≥20 yrs). The distinction between adults and youth was dictated by how NHANES data are collected; for example, the educational level variable is only available for those 20 years of age and older and school attendance is more applicable to children and youth. We repeated the main analysis separately for individuals who self-identified with different minority groups, including Non-Hispanic Black, Asian (only available in NHANES 2011-2012), Mexican American, Other Hispanic, and Other/Multiracial.
+For each reference population, the racial gap was calculated as the average difference in forced expiratory volume in one second (FEV~1~) and forced vital capacity (FVC) between minority and majority populations adjusted by age, height, and sex in a linear regression model. We evaluated the reduction in the racial gap separately for children (\<20 yrs) and adults (≥20 yrs). The distinction between adults and children was dictated by how NHANES data are collected; for example, the educational level variable is only available for those 20 years of age and older and school attendance is more applicable to children. We repeated the main analysis separately for individuals who self-identified with different minority groups, including Non-Hispanic Black, Asian (only available in NHANES 2011-2012), Mexican American, Other Hispanic, and Other/Multiracial. The analysis was done with appropriate 6-year sampling weights to account for complex survey design.
 
 In sensitivity analyses, we evaluated results separately for males and females and those born inside the US. We also evaluated the proportion of the racial gap in lung function between Black and White participants that can be explained by poverty or allostatic load. To examine the effects of our choice of SDoH variables, we conducted a leave-one-out analysis, where we reproduced the results 9 times, each time leaving one of the SDoH out of the successively defined reference populations.
 
@@ -500,7 +502,7 @@ return(refs)
 
 #### Participants
 
-Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 youths (@fig-flowchart). Participant flow across successive reference populations is provided in the appendix (@suppfig-flowrefs). Characteristics of participants are summarized in @tbl-table1.
+Of the 30,442 participants in NHANES 2007-2012, we included 17,032 participants who had high-quality spirometry. Excluding smokers and individuals with respiratory diagnoses or symptoms led to 8,802 participants, including 4,832 adults and 3,970 children (@fig-flowchart). Participant flow across successive reference populations is provided in the appendix (@suppfig-flowrefs). Characteristics of participants are summarized in @tbl-table1.
 
 ```{r}
 
@@ -643,23 +645,23 @@ predPlot <- function(df) {
 
 #### Disproportionate Impact of Exposures
 
-From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The proportion of participants decreased from 13% to 7% for Black youths, from 11% to 4% for Black adults, from 15% to 10% for Mexican American youths, from 10% to 3% for Mexican American adults, from 7% to 5% for Other Hispanic youths, and from 6% to 3% for Other Hispanic adults (@fig-racialgap). The reduction in the proportion of participants after excluding those with unfavorable SDoH confirms the disproportionate impact of these factors on Black, Mexican American, and Other Hispanic populations in the US. On the other hand, The proportion of participants remained within 1% of the reference population for participants who identified as Asian or Other/Multiracial.
+From the base reference population to the most restrictive, the number of included participants decreased from 8,802 to 1,921. The proportion of participants decreased from 13% to 7% for Black children, from 11% to 4% for Black adults, from 15% to 10% for Mexican American children, from 10% to 3% for Mexican American adults, from 7% to 5% for Other Hispanic children, and from 6% to 3% for Other Hispanic adults (@fig-racialgap). The reduction in the proportion of participants after excluding those with unfavorable SDoH confirms the disproportionate impact of these factors on Black, Mexican American, and Other Hispanic populations in the US. On the other hand, The proportion of participants remained within 1% of the reference population for participants who identified as Asian or Other/Multiracial.
 
 #### Non-Hispanic Black Americans
 
-In the baseline reference population, average FEV~1~ and FVC were 350.5 mL and 418.4 mL higher in White youths compared with Black youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 502.6 mL for FEV~1~ and 686.5 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 86.9 mL (24.8%) and 109.6 mL (26.2%) in youths and 132.2 mL (26.3%) and 132.9 mL (19.4%) in adults, respectively (@fig-racialgap).
+In the baseline reference population, average FEV~1~ and FVC were 350.5 mL and 418.4 mL higher in White children compared with Black children, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 502.6 mL for FEV~1~ and 686.5 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 86.9 mL (24.8%) and 109.6 mL (26.2%) in children and 132.2 mL (26.3%) and 132.9 mL (19.4%) in adults, respectively (@fig-racialgap).
 
 #### Mexican Americans
 
-Average FEV~1~ and FVC were 56.3 mL and 34.7 mL higher in Mexican American youths compared to White youths, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline, with differences smaller than 6 mL (@suppfig-Mexican). Excluding individuals with unfavorable SDoH resulted in higher FEV~1~ and FVC values for the Mexican American population compared to the White population. Adjusted average FEV~1~ and FVC values for Mexican American youths increased by 38.0 mL (67.5%) and 28.2 mL (81.3%) higher than White youths. For adults, average FEV~1~ and FVC increased by 33.8 mL and 35.6 mL compared to White adults (@suppfig-Mexican).
+Average FEV~1~ and FVC were 56.3 mL and 34.7 mL higher in Mexican American children compared to White children, after adjusting for age, height, and biological sex at birth. Mexican American and White adults had similar adjusted FEV~1~ and FVC at baseline, with differences smaller than 6 mL (@suppfig-Mexican). Excluding individuals with unfavorable SDoH resulted in higher FEV~1~ and FVC values for the Mexican American population compared to the White population. Adjusted average FEV~1~ and FVC values for Mexican American children increased by 38.0 mL (67.5%) and 28.2 mL (81.3%) higher than White children. For adults, average FEV~1~ and FVC increased by 33.8 mL and 35.6 mL compared to White adults (@suppfig-Mexican).
 
 #### Other Hispanic Americans
 
-In the baseline reference population, average FEV~1~ and FVC were 65.9 mL and 99.1 mL higher in White youths compared with Other Hispanic youths youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 67.8 mL for FEV~1~ and 117.3 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 10.0 mL (15.2%) and 19.2 mL (19.3%) in youths and 58.2 mL (85.9%) and 14.5 mL (12.4%) in adults, respectively (@suppfig-hispanic) .
+In the baseline reference population, average FEV~1~ and FVC were 65.9 mL and 99.1 mL higher in White children compared with Other Hispanic children, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 67.8 mL for FEV~1~ and 117.3 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 10.0 mL (15.2%) and 19.2 mL (19.3%) in children and 58.2 mL (85.9%) and 14.5 mL (12.4%) in adults, respectively (@suppfig-hispanic) .
 
 #### Asian Americans
 
-In the baseline reference population, average FEV~1~ and FVC were 183.8 mL and 307.2 mL higher in White youths compared with Asian youths, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 367.5 mL for FEV~1~ and 500.1 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 12.1 mL (6.6%) and 38.5 mL (12.5%) in youths but increased by 51.8 mL (14.1%) and 55.6 mL (11.1%) in adults (@suppfig-Asian).
+In the baseline reference population, average FEV~1~ and FVC were 183.8 mL and 307.2 mL higher in White children compared with Asian children, after adjusting for age, height, and biological sex at birth. For adults, the adjusted racial gap was 367.5 mL for FEV~1~ and 500.1 mL for FVC. After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 12.1 mL (6.6%) and 38.5 mL (12.5%) in children but increased by 51.8 mL (14.1%) and 55.6 mL (11.1%) in adults (@suppfig-Asian).
 
 The appendix includes additional results for Other/Multiracial (@suppfig-Other).
 
@@ -669,23 +671,23 @@ We conducted additional analyses to further evaluate racial gaps in lung functio
 
 #### Biological Sex
 
-In females, excluding those with unfavorable SDoH reduced the racial gap in FEV~1~ and FVC by 51.6 mL (16.1%) and 66.1 mL (18.6%) in youths, and 113.6 mL (26.8%) and 122.2 mL (19.8%) in adults, respectively (@suppfig-females). In males, excluding those with unfavorable SDoH reduced the racial gap in FEV~1~ and FVC by 137.3 mL (34.6%) and 171.3 mL (33.8%) in youths, and 89.4 mL (14.5%) and 71.0 mL (8.2%) in adults (@suppfig-males).
+In females, excluding those with unfavorable SDoH reduced the racial gap in FEV~1~ and FVC by 51.6 mL (16.1%) and 66.1 mL (18.6%) in children, and 113.6 mL (26.8%) and 122.2 mL (19.8%) in adults, respectively (@suppfig-females). In males, excluding those with unfavorable SDoH reduced the racial gap in FEV~1~ and FVC by 137.3 mL (34.6%) and 171.3 mL (33.8%) in children, and 89.4 mL (14.5%) and 71.0 mL (8.2%) in adults (@suppfig-males).
 
 #### Country of Birth
 
-After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 82.2 mL (24.1)% and 101.1 mL (24.8%) in US-born youths, and 171.3 mL (35.4%) and 152.9 mL (22.9%) in US-born adults (@suppfig-usborn). Individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, and reported healthier diets, but had more occupational exposures (@supptab-fig1byusborn). Non-US-born Black individuals had higher income and were more likely to be covered by health insurance than US-born Black individuals while US-born White participants had higher income and higher insurance coverage that non-US-born White participants (@supptab-fig1byusborn).
+After excluding those with unfavorable SDoH, the racial gap in FEV~1~ and FVC was reduced by 82.2 mL (24.1)% and 101.1 mL (24.8%) in US-born children, and 171.3 mL (35.4%) and 152.9 mL (22.9%) in US-born adults (@suppfig-usborn). Individuals born outside of the US had higher FEV~1~ and FVC, were less exposed to second-hand and maternal smoking, and reported healthier diets, but had more occupational exposures (@supptab-fig1byusborn). Non-US-born Black individuals had higher income and were more likely to be covered by health insurance than US-born Black individuals while US-born White participants had higher income and higher insurance coverage that non-US-born White participants (@supptab-fig1byusborn).
 
 #### Allostatic Load
 
-The allostatic load score ranged from 0 to 8 among self-identified Non-Hispanic Black and White participants. Excluding participants who had an allostatic load score of 1 or higher reduced the racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in youths and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
+The allostatic load score ranged from 0 to 8 among self-identified Non-Hispanic Black and White participants. Excluding participants who had an allostatic load score of 1 or higher reduced the racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in children and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
 
 #### Poverty
 
-Among self-identified Black and White participants, excluding those with income to poverty ratio under five reduced the racial gap in FEV~1~ and FVC by 13.0 mL (3.7%) and 10.4 mL (2.5%) in youths, and 28.2 mL (5.6%) and 2 mL (0.3%) in adults (@suppfig-incomepovertyratio).
+Among self-identified Black and White participants, excluding those with income to poverty ratio under five reduced the racial gap in FEV~1~ and FVC by 13.0 mL (3.7%) and 10.4 mL (2.5%) in children, and 28.2 mL (5.6%) and 2 mL (0.3%) in adults (@suppfig-incomepovertyratio).
 
 #### Leave-one-out
 
-In the leave-one-out analysis, the proportion of the racial gap explained by SDoH remained consistent except for when diet health was not accounted for, in which case the proportion of racial gaps explained by SDoH was 89.2 mL (25.5%) for FEV~1~ and 110.5 mL (26.4%) for FVC in youths and 148.0 mL (29.5%) for FEV~1~ and 121.1 mL (17.7%) for FVC in adults (@suppfig-leavejob to @suppfig-leavediet).
+In the leave-one-out analysis, the proportion of the racial gap explained by SDoH remained consistent except for when diet health was not accounted for, in which case the proportion of racial gaps explained by SDoH was 89.2 mL (25.5%) for FEV~1~ and 110.5 mL (26.4%) for FVC in children and 148.0 mL (29.5%) for FEV~1~ and 121.1 mL (17.7%) for FVC in adults (@suppfig-leavejob to @suppfig-leavediet).
 
 ## Discussion
 
@@ -721,7 +723,7 @@ flowchart TD
     C -- Excluded low quality spirometry --> E[n=17,032]
     E -- Excluded smokers and those with respiratory diagnoses or symptoms --> F[n=8,802]
     F -- Adults --> A0[n=4,832]
-    F -- Youth  --> Y0[n=3,970]
+    F -- Children  --> Y0[n=3,970]
 
 ```
 
@@ -982,7 +984,7 @@ plot_participants_change <- function(refs_adult_list, refs_youth_list, single_se
   }
   
   gap_perc_black_adult <- plot_gap_perc(refs_df_percent_adult, "Adults (≥20 yrs)")
-  gap_perc_black_youth <- plot_gap_perc(refs_df_percent_youth, "Youth (<20 yrs)")
+  gap_perc_black_youth <- plot_gap_perc(refs_df_percent_youth, "Children (6-19 yrs)")
   
   p <- (((gap_perc_black_youth) + 
            plot_layout(axes = "collect")) | 
@@ -1196,7 +1198,7 @@ flowchart TD
     A7[n=816] -- Excluded those without health insurance --> A8[n=711]
     A8[n=711] -- Excluded those who did not ever attend college --> A9[n=571]
     A9[n=571] -- Excluded those with self-reported unhealthy diet --> A10[n=514]
-    Y1["Youth, n=3,970"] -- Excluded those with occupational exposures --> Y2[n=3767]
+    Y1["Children, n=3,970"] -- Excluded those with occupational exposures --> Y2[n=3767]
     Y2[n=
     3767] -- Excluded those not physically active --> Y3[n=3432]
     Y3[n=
@@ -1377,7 +1379,7 @@ Changes in lung function racial gaps between Other/Multiracial and Non-Hispanic 
 
 ### Allostatic Load
 
-Excluding participants who had allostatic load score of 1 or higher reduced racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in youths and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
+Excluding participants who had allostatic load score of 1 or higher reduced racial gap in FEV~1~ and FVC by 37.5 mL (10.7%) and 34.6 mL (8.3%) in children and by 105.0 mL (20.9%) and 100.2 mL (14.6%) in adults.
 
 ::: {#suppfig-allostaticload}
 ```{r, warning=FALSE, message=FALSE}
@@ -1395,7 +1397,7 @@ Changes in lung function racial gaps between Non-Hispanic Black and Non-Hispanic
 
 ### Income to Poverty Ratio
 
-When we excluded participants with income to poverty ratio under five, the proportion of racial gap in FEV~1~ and FVC that was explained by poverty was 13.0 mL (3.7%) and 10.4 mL (2.5%) in youths, and 28.2 mL (5.6%) and 2 mL (0.3%) in adults, and as shown in @suppfig-incomepovertyratio.
+When we excluded participants with income to poverty ratio under five, the proportion of racial gap in FEV~1~ and FVC that was explained by poverty was 13.0 mL (3.7%) and 10.4 mL (2.5%) in children, and 28.2 mL (5.6%) and 2 mL (0.3%) in adults, and as shown in @suppfig-incomepovertyratio.
 
 ::: {#suppfig-incomepovertyratio}
 ```{r, warning=FALSE, message=FALSE}
